Fixed hero alignment

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ html {
 
 .hero {
     padding-top: 106px;
+    margin: 0 auto;
 }
 
 .title {
